--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- <button onclick="myimage()">try this edit </button> -->
 
-<canvas id="canvas" width="270" height="600" >
+<canvas id="canvas" width="1535" height="700" style="background-color: rgb(138, 23, 23);" >
 
 </canvas>
 
