--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 
 <!-- <button onclick="myimage()">try this edit </button> -->
 
-<canvas id="canvas" width="1535" height="700" style="background-color: rgb(138, 23, 23);" >
+<canvas id="canvas" width="window.innerWidth" height="window.innerHeigth" style="background-color: rgb(138, 23, 23);" >
 
 </canvas>
-
-
-    
 </body>
 </html>
 <script src="script.js"></script>
